# itrace

./: LICENSE.txt  README.rst  pyproject.toml
itrace/: trace.py
trace/: iter.py  plot.py  trace.py
