[tool.poetry]
name = "itrace"
version = "0.1.0"
description = "A data structure for data processing algorithm"
authors = ["François Orieux <orieux@l2s.centralesupelec.fr>"]
license = "WTFPL"
include = ["py.typed", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
h5py = "^3.1.0"
tqdm = "^4.54.0"
matplotlib = "^3.3.3"
varname = "^0.8.1"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
max-parents = 10
disable = ["bad-continuation", "import-error", "line-too-long"]
